--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
 			<artifactId>druid</artifactId>
 			<version>1.1.21</version>
 		</dependency>
+		<!-- 分页插件依赖 -->
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>4.1.0</version>
+		</dependency>
 		<!--默认就有的依赖-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
